--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3480,7 +3480,7 @@
 			}
 
 		.wrapper.spotlight {
-			background-color: #4c5c96;
+			background-color: #4ca797;
 		}
 
 			.wrapper.spotlight:before, .wrapper.spotlight:after {
@@ -3541,7 +3541,7 @@
 			}
 
 			.wrapper.spotlight.style2 {
-				background-color: #45558d;
+				background-color: #469e8f;
 			}
 
 				.wrapper.spotlight.style2:before, .wrapper.spotlight.style2:after {
